--- a/src/components/HeaderComponent/HeaderComponent.css
+++ b/src/components/HeaderComponent/HeaderComponent.css
@@ -4,6 +4,8 @@
     justify-content: space-around;
     align-items: center;
     background-color: #4a4c4f;
+    position: fixed;
+    width: 100%;
 }
 
 .header-form{
