--- a/src/components/HeaderComponent/HeaderComponent.css
+++ b/src/components/HeaderComponent/HeaderComponent.css
@@ -17,7 +17,9 @@
 }
 
 .header-form{
-    width: 33%;
+    width: 35%;
+    display: flex;
+    align-items: center;
 }
 
 .header-form input{
@@ -26,6 +28,7 @@
     width:70%;
     border-radius: 50px;
     outline: none;
+    font-size: 16px;
 }
 
 
@@ -33,7 +36,7 @@
 .header-form button{
     border-radius: 50%;
     margin-left: 5px;
-    padding: 10px;
+    padding: 13px;
     border: none;
     background-color: #4aa130;
     cursor: pointer;
