--- a/src/components/HomeComponent/HomeComponent.css
+++ b/src/components/HomeComponent/HomeComponent.css
@@ -10,7 +10,9 @@
 }
 
 .movies-container{    
-    width: 100%;    
+    width: 100%;
+    padding: 20px 10px;
+    overflow-x: hidden;    
 }
 
 .filter-container{ 
