Add Newest Movies

--- a/src/components/HomeComponent/CarouselComponent/CarouselComponent.css
+++ b/src/components/HomeComponent/CarouselComponent/CarouselComponent.css
@@ -1,7 +1,7 @@
 .carousel-container{
     border: 1px solid #4aa130;  
-    padding: 0;
-    max-width: 800px;
+    padding: 0 10px 10px 10px;
+    max-width: 900px;
     width: 100%;
     margin: 0 auto;
     border-radius: 5px;
@@ -23,4 +23,8 @@
     outline: none;
     border: none;
     cursor: pointer; 
+}
+
+.carousel-item{
+    text-align: center;
 }
